# pkmodelling

./: .bettercodehub.yml  .gitignore  README.md  demo.py  prototype.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  unit-test-os-coverage.yml  unit-test-python-coverage.yml  unit-test-python-version-coverage.yml
PKModelling_SABS_Group1/: model.py
docs/: conf.py  index.rst  quickstart.rst
pkmodel/: model.py  protocol.py  solution.py
pkmodel/tests/: test_model.py  test_protocol.py  test_solution.py
