[tool.poetry]
name = "PKModelling_SABS_Group1"
version = "0.1.0"
description = "Package to create and visualise pharmacokinetics model"
authors = ["Emily Thomas <esthomas09@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.19.2"
matplotlib = "3.3.2"
scipy = "1.5.3"
parameterized = "0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
